# rust-sdk

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: autoposter.rs  bot.rs  client.rs  error.rs  http.rs  lib.rs  snowflake.rs  user.rs  util.rs
src/autoposter/: client.rs  mod.rs  serenity_impl.rs  twilight_impl.rs
src/models/: bot.rs  mod.rs  snowflake.rs  user.rs
src/webhook/: actix.rs  actix_web.rs  axum.rs  mod.rs  rocket.rs  vote.rs  warp.rs
