[package]
name = "topgg"
version = "1.2.1"
edition = "2021"
authors = ["null (https://github.com/null8626)", "Top.gg <support@top.gg> (https://top.gg)"]
description = "The official Rust wrapper for the Top.gg API"
readme = "README.md"
repository = "https://github.com/top-gg/rust-sdk"
license = "MIT"
keywords = ["discord", "bots", "topgg", "dbl"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".gitattributes", ".github/", ".gitignore", "rustfmt.toml"]

[dependencies]
cfg-if = "1"
hyper = { version = "0.14", features = ["client", "http1"], optional = true }
hyper-tls = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
urlencoding = "2"

chrono = { version = "0.4", default-features = false, optional = true, features = ["serde"] }
serde_json = { version = "1", optional = true }

rocket = { version = "0.4", default-features = false, optional = true }
axum = { version = "0.6", default-features = false, optional = true, features = ["http1", "tokio"] }
async-trait = { version = "0.1", optional = true }
warp = { version = "0.3", default-features = false, optional = true }
actix-web = { version = "4", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["api"]
api = ["chrono", "hyper", "hyper-tls", "serde_json"]
autoposter = ["api", "tokio"]

webhook = []
rocket = ["webhook", "serde_json", "dep:rocket"]
axum = ["webhook", "async-trait", "serde_json", "dep:axum"]
warp = ["webhook", "async-trait", "dep:warp"]
actix-web = ["webhook", "dep:actix-web"]