[package]
name = "topgg"
version = "1.4.0"
edition = "2021"
authors = ["null (https://github.com/null8626)", "Top.gg <support@top.gg> (https://top.gg)"]
description = "The official Rust wrapper for the Top.gg API"
readme = "README.md"
repository = "https://github.com/top-gg/rust-sdk"
license = "MIT"
keywords = ["discord", "bot", "topgg"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".gitattributes", ".github/", ".gitignore", "rustfmt.toml"]

[dependencies]
cfg-if = "1"
paste = { version = "1", optional = true }
reqwest = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
urlencoding = "2"

serenity = { version = "0.12", features = ["builder", "client", "gateway", "model", "utils"], optional = true }

twilight-model = { version = "0.15", optional = true }
twilight-cache-inmemory = { version = "0.15", optional = true }

chrono = { version = "0.4", default-features = false, optional = true, features = ["serde"] }
serde_json = { version = "1", optional = true }

rocket = { version = "0.5", default-features = false, features = ["json"], optional = true }
axum = { version = "0.7", default-features = false, optional = true, features = ["http1", "tokio"] }
async-trait = { version = "0.1", optional = true }
warp = { version = "0.3", default-features = false, optional = true }
actix-web = { version = "4", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[features]
default = ["api"]
api = ["chrono", "reqwest", "serde_json"]
autoposter = ["api", "tokio"]

serenity = ["dep:serenity", "paste"]
serenity-cached = ["serenity", "serenity/cache"]

twilight = ["twilight-model"]
twilight-cached = ["twilight", "twilight-cache-inmemory"]

webhook = []
rocket = ["webhook", "dep:rocket"]
axum = ["webhook", "async-trait", "serde_json", "dep:axum"]
warp = ["webhook", "async-trait", "dep:warp"]
actix-web = ["webhook", "dep:actix-web"]